tests/fixtures/errors/move_borrowed_field.z
# E0200: a borrowed variable cannot be moved into a reftype field.
thing: class { v: i64 }
box: class { t: thing }
f: function {b: box x: thing} is {
    b.t = x
}
main: function is {
    t1: thing v: 1
    t2: thing v: 2
    bx: box t: t1
    f b: bx x: t2
}
